--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/remixicon/fonts/remixicon.css",
               "src/assets/css/app.css",
               "src/styles.scss"
