--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@ng-select/ng-select": "^13.9.1",
+    "bootstrap": "^4.6.0",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
