--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jspdf-autotable": "^3.5.23",
     "jszip": "^3.10.1",
     "ngx-pagination": "^6.0.3",
+    "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
     "remixicon": "^4.5.0",
     "rxjs": "~7.8.0",
